# Powee

./: .gitignore  README.md  pyproject.toml
core/: clp.py  sketch.ipynb
frontend/: main.py
src/core/: clp.py
util/: calculations.ipynb  calculations.py  data.db  db.py
