[project]
name = "powee"
version = "0.1.0"
description = "Simple app to calculate how much electricity the homelab uses to run 24/7"
authors = [
    {name = "Ivan Mashkin"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "polars (>=1.31.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
